[package]
name = "unifire"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main.rs" # TODO: Remove demo "app" fn main, and move to lib.rs.
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86_64 = "0.14.11"
